Add stuff for timestep convergence test

--- a/figures/Makefile
+++ b/figures/Makefile
@@ -1,5 +1,10 @@
+all: stability.pdf timestep_convergence.pdf
+
 stability.pdf: stability_region.py
 	python stability_region.py
+
+timestep_convergence.pdf:
+	python timestep_convergence.py
 
 .PHONY: clean
 clean:
