--- a/figures/Makefile
+++ b/figures/Makefile
@@ -1,10 +1,13 @@
-all: stability.pdf timestep_convergence.pdf
+all: stability.pdf timestep_convergence.pdf timestep_convergence_qi.pdf
 
 stability.pdf: stability_region.py
 	python stability_region.py
 
 timestep_convergence.pdf:
 	python timestep_convergence.py
+
+timestep_convergence_qi.pdf:
+	python timestep_convergence_qi.py
 
 .PHONY: clean
 clean:
