--- a/figures/Makefile
+++ b/figures/Makefile
@@ -1,13 +1,10 @@
-all: stability.pdf timestep_convergence.pdf timestep_convergence_qi.pdf benchmark_setup.pdf tau_sensitivity.pdf
+all: stability_region.pdf timestep_convergence.pdf benchmark_setup.pdf tau_sensitivity.pdf
 
-stability.pdf: stability_region.py
+stability_region.pdf: stability_region.py
 	python stability_region.py
 
 timestep_convergence.pdf: timestep_convergence.py
 	python timestep_convergence.py
-
-timestep_convergence_qi.pdf: timestep_convergence_qi.py
-	python timestep_convergence_qi.py
 
 benchmark_setup.pdf: benchmark_setup.py
 	python benchmark_setup.py
